--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Estados do Brasil</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+    <div class="grid">
+    <header id="header">
+        <h1>Estados do Brasil</h1>
+        <a href="./favoritos/index.html">
+        <h4>Ver favoritos</h4>
+        </a>
+    </header>
+    <main id="main">
+        <a href="./municipios/index.html?uf=RO"></a>
+    </main>
+    <footer class="footer">
+        <p>© 2024 Prova de Programação Web</p>
+    </footer>
+</div>
+<script src="./index.js"></script>
+</body>
+</html>
