--- a/municipios/index.html
+++ b/municipios/index.html
@@ -9,6 +9,7 @@
 <body>
     <header id="header">
         <h4><a href="../index.html">Ir para a home</a></h4>
+        <a href="../favoritos/index.html">Ver favoritos</a>
     </header>
     <main id="main">
 
